2008-09-14  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/*.h: Added many missing . to documentation, 
	and corrected some whitespace.

2008-09-12  Jonathon Jongsma  <jonathon@gnome.org>

	* cairomm/win32_surface.cc:
	* cairomm/win32_surface.h: add the Win32PrintingSurface type

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc:
	* cairomm/surface.cc: style fixups: use cobj() instead of using m_cobject
	directly whenever possible

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/win32_surface.cc:
	* cairomm/win32_surface.h: add Win32Surface::create_with_ddb (and an alias for
	create_with_dib()), and Win32Surface::get_image()

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/surface.cc:
	* cairomm/surface.h:
	* tests/test-surface.cc: added Surface::get_fallback_resolution() + test

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/surface.cc:
	* cairomm/surface.h:
	* tests/test-surface.cc: add Surface::get_content() + test

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/scaledfont.cc:
	* cairomm/scaledfont.h:
	* tests/test-scaled-font.cc: add ScaledFont::get_scale_matrix() + test

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/surface.cc:
	* cairomm/surface.h:
	* tests/test-surface.cc: add PsSurface::get_eps()

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc:
	* cairomm/context.h:
	* tests/test-context.cc: add Context::has_show_text_glyphs() + test

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/surface.cc:
	* cairomm/surface.h:
	* tests/test-surface.cc: change the names of the stream creation functions to
	'create_for_stream()' in order to avoid ambiguous template overload issues (I
	was getting compile failures when passing a literal string for the std::string
	parameter of the normal create() function)

2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc:
	* cairomm/context.h: