@@ -1,5 +1,10 @@
 2008-09-14  Murray Cumming  <murrayc@murrayc.com>
 
+	* cairomm/fontface.[h|cc]: Remove the useless/awkward get_*_func() 
+	methods. We do not have them in gtkmm either.
+
+2008-09-14  Murray Cumming  <murrayc@murrayc.com>
+
 	* cairomm/*.h: Added many missing . to documentation, 
 	and corrected some whitespace.
 
